<resources>
    <string name="app_name">Netbazaar</string>

    <string name="hello">Hello</string>
    <string name="details">Enter your details to continue!</string>
    <string name="phone_number">Phone Number</string>
    <string name="table_number">Table Number</string>
    <string name="one">1</string>
    <string name="password">Password</string>
    <string name="store_code">Store Code</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="login">Login</string>
    <string name="terms_condition">Terms and conditions</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="enter_passcode">Please Enter 6 digit Code</string>
    <string name="table">Table</string>
    <string name="place_order">Place Order</string>
    <string name="continue_shopping">Continue Shopping</string>
    <string name="unpaid_order">Unpaid Order</string>
    <string name="paid_order">Paid Order</string>
    <string name="logout">Logout</string>
    <string name="beef_burger">Beef Burger</string>
    <string name="cheesy_mozarella">Cheesy Mozarella</string>
    <string name="popular_dishes">Popular dishes</string>
    <string name="categories">Categories</string>
    <string name="chineese">Chineese</string>
    <string name="open">OPEN</string>
    <string name="order">Order</string>
    <string name="details_cart">Details</string>
    <string name="split_bill">Split Bill</string>
    <string name="split">Split</string>
    <string name="tables">Tables</string>
    <string name="back">Back</string>
    <string name="view_table">View Table</string>
    <string name="total_amt">Total Amount</string>
    <string name="name">Name</string>
    <string name="_continue">Continue</string>
</resources>