<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:weightSum="2"
    tools:context=".ui.activity.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.9"
        android:background="@drawable/background_image_login">

        <ImageView
            android:id="@+id/loginImage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/man_women" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.1"
        android:orientation="vertical">

        <com.netbazaar.view.NetbazaarTextView
            android:id="@+id/textHello"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_32sdp"
            android:layout_marginLeft="@dimen/_21sdp"
            android:layout_marginTop="@dimen/_21sdp"
            android:text="@string/hello"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/_25sdp"
            android:textStyle="bold"
            app:textStyle="@integer/poppins_semibold" />

        <com.netbazaar.view.NetbazaarTextView
            android:id="@+id/textDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_21sdp"
            android:text="@string/details"
            android:textAlignment="center"
            android:textColor="@color/gray"
            android:textSize="@dimen/_9sdp"
            app:textStyle="@integer/poppins_regular" />

        <com.netbazaar.view.NetbazaarTextView
            android:id="@+id/textPhoneNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_21sdp"
            android:layout_marginTop="@dimen/_21sdp"
            android:text="@string/phone_number"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="14dp"
            android:textFontWeight="500"
            app:textStyle="@integer/poppins_regular" />

        <com.netbazaar.view.NetbazaarEditText
            android:id="@+id/edTextPhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginLeft="@dimen/_21sdp"
            android:layout_marginTop="@dimen/_2sdp"
            android:layout_marginRight="@dimen/_21sdp"
            android:background="@drawable/edit_text_background_style"
            android:hint="@string/phone_number"
            android:paddingLeft="20dp"
            android:textSize="15dp"
            app:textStyle="@integer/poppins_regular" />

        <com.netbazaar.view.NetbazaarTextView
            android:id="@+id/textPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_21sdp"
            android:layout_marginTop="@dimen/_17sdp"
            android:text="@string/store_code"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textFontWeight="500"
            android:textSize="14dp"
            app:textStyle="@integer/poppins_regular" />

        <com.netbazaar.view.NetbazaarEditText
            android:id="@+id/edTextPassword"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginLeft="@dimen/_21sdp"
            android:layout_marginTop="@dimen/_2sdp"
            android:layout_marginRight="@dimen/_21sdp"
            android:background="@drawable/edit_text_background_style"
            android:hint="@string/store_code"
            android:paddingLeft="20dp"
            android:textSize="15dp"
            app:textStyle="@integer/poppins_regular" />

        <com.netbazaar.view.NetbazaarTextView
            android:id="@+id/textForgotPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_21sdp"
            android:layout_marginTop="@dimen/_2sdp"
            android:layout_marginRight="@dimen/_21sdp"
            android:text="@string/forgot_password"
            android:textAlignment="textEnd"
            android:textColor="@color/red"
            android:textSize="14dp"
            app:textStyle="@integer/poppins_regular" />

        <FrameLayout
            android:id="@+id/btnLogin"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_35sdp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@drawable/button_background">

            <com.netbazaar.view.NetbazaarTextView
                android:id="@+id/textLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/_2sdp"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textSize="@dimen/_8sdp"
                app:textStyle="@integer/poppins_regular" />

        </FrameLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginBottom="@dimen/_6sdp"
                android:gravity="center_horizontal|center_vertical">

                <View
                    android:layout_width="10dp"
                    android:layout_height="10dp"
                    android:background="@drawable/circle" />

                <com.netbazaar.view.NetbazaarTextView
                    android:id="@+id/textTermsCondition"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_6sdp"
                    android:text="@string/terms_condition"
                    android:textColor="@color/black"
                    android:textSize="12dp"
                    app:textStyle="@integer/poppins_regular" />

                <View
                    android:layout_width="10dp"
                    android:layout_height="10dp"
                    android:layout_marginLeft="@dimen/_16sdp"
                    android:background="@drawable/circle" />

                <com.netbazaar.view.NetbazaarTextView
                    android:id="@+id/textPrivacyPolicy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_6sdp"
                    android:text="@string/privacy_policy"
                    android:textColor="@color/black"
                    android:textSize="12dp"
                    app:textStyle="@integer/poppins_regular" />

            </LinearLayout>

        </RelativeLayout>
    </LinearLayout>

</LinearLayout>