<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.SelectOptionActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <FrameLayout
            android:id="@+id/btnTable"
            android:layout_width="@dimen/_150sdp"
            android:layout_height="@dimen/_37sdp"
            android:layout_gravity="center"
            android:layout_centerInParent="true"
            android:background="@drawable/option_btn_bg">

            <com.netbazaar.view.NetbazaarTextView
                android:id="@+id/textTable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/table"
                android:textColor="@color/white"
                android:textSize="@dimen/_8sdp"
                app:textStyle="@integer/poppins_regular" />

        </FrameLayout>

        <FrameLayout
            android:id="@+id/btnPlaceOrder"
            android:layout_width="@dimen/_150sdp"
            android:layout_height="@dimen/_37sdp"
            android:layout_gravity="center"
            android:layout_centerInParent="true"
            android:layout_marginTop="@dimen/_2sdp"
            android:background="@drawable/option_btn_bg">

            <com.netbazaar.view.NetbazaarTextView
                android:id="@+id/textPlaceOrder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"

                android:text="@string/place_order"
                android:textColor="@color/white"
                android:textSize="@dimen/_8sdp"
                app:textStyle="@integer/poppins_regular" />

        </FrameLayout>

        <FrameLayout
            android:id="@+id/btnUnpaidOrder"
            android:layout_width="@dimen/_150sdp"
            android:layout_height="@dimen/_37sdp"
            android:layout_gravity="center"
            android:layout_centerInParent="true"
            android:layout_marginTop="@dimen/_2sdp"
            android:background="@drawable/option_btn_bg">

            <com.netbazaar.view.NetbazaarTextView
                android:id="@+id/textUnpaidOrder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/unpaid_order"
                android:textColor="@color/white"
                android:textSize="@dimen/_8sdp"
                app:textStyle="@integer/poppins_regular" />

        </FrameLayout>
        <FrameLayout
            android:id="@+id/btnPaidOrder"
            android:layout_width="@dimen/_150sdp"
            android:layout_height="@dimen/_37sdp"
            android:layout_gravity="center"
            android:layout_centerInParent="true"
            android:layout_marginTop="@dimen/_2sdp"
            android:background="@drawable/option_btn_bg">

            <com.netbazaar.view.NetbazaarTextView
                android:id="@+id/textPaidOrder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"

                android:text="@string/paid_order"
                android:textColor="@color/white"
                android:textSize="@dimen/_8sdp"
                app:textStyle="@integer/poppins_regular" />

        </FrameLayout>
        <FrameLayout
            android:id="@+id/btnLogout"
            android:layout_width="@dimen/_150sdp"
            android:layout_height="@dimen/_37sdp"
            android:layout_gravity="center"
            android:layout_centerInParent="true"
            android:layout_marginTop="@dimen/_2sdp"
            android:background="@drawable/option_btn_bg">

            <com.netbazaar.view.NetbazaarTextView
                android:id="@+id/textLogout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/logout"
                android:textColor="@color/white"
                android:textSize="@dimen/_8sdp"
                app:textStyle="@integer/poppins_regular" />

        </FrameLayout>

    </LinearLayout>

</RelativeLayout>