<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_weight="1"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:visibility="visible"
    android:background="@color/white"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_5sdp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <com.netbazaar.view.NetbazaarTextView
            android:id="@+id/textDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/details_cart"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:textStyle="@integer/poppins_semibold" />

        <LinearLayout
            android:id="@+id/btnViewTable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:background="@drawable/back_btn_bg"
            android:gravity="center_vertical"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="@dimen/_2sdp"
            android:paddingLeft="@dimen/_3sdp"
            android:paddingTop="@dimen/_2sdp"
            android:paddingRight="@dimen/_3sdp"
            android:paddingBottom="@dimen/_2sdp">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/eye" />

            <com.netbazaar.view.NetbazaarTextView
                android:id="@+id/textViewTable"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_7sdp"
                android:layout_marginLeft="@dimen/_5sdp"
                android:text="@string/view_table"
                android:textColor="@color/red"
                android:textSize="11sp"
                app:textStyle="@integer/poppins_regular" />
        </LinearLayout>


    </RelativeLayout>

    <com.netbazaar.view.NetbazaarTextView
        android:id="@+id/textTableNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_21sdp"
        android:text="@string/table_number"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textFontWeight="500"
        app:textStyle="@integer/poppins_regular" />

    <com.netbazaar.view.NetbazaarEditText
        android:id="@+id/edTextPhoneNumber"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_2sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:background="@drawable/edit_text_background_style"
        android:hint="@string/table_number"
        android:drawableRight="@drawable/down_arrow"
        android:paddingRight="@dimen/_5sdp"
        android:paddingLeft="20dp"
        android:textSize="15dp"
        app:textStyle="@integer/poppins_regular" />

    <com.netbazaar.view.NetbazaarTextView
        android:id="@+id/textName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:text="@string/name"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textFontWeight="500"
        app:textStyle="@integer/poppins_regular" />

    <com.netbazaar.view.NetbazaarEditText
        android:id="@+id/edTextName"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_2sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:background="@drawable/edit_text_background_style"
        android:hint="@string/name"
        android:paddingLeft="20dp"
        android:textSize="15dp"
        app:textStyle="@integer/poppins_regular" />

    <com.netbazaar.view.NetbazaarTextView
        android:id="@+id/textPhoneNumber_Cart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:text="@string/phone_number"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textFontWeight="500"
        app:textStyle="@integer/poppins_regular" />

    <com.netbazaar.view.NetbazaarEditText
        android:id="@+id/edTextPhoneNumber_Cart"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_2sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:background="@drawable/edit_text_background_style"
        android:hint="@string/phone_number"
        android:paddingLeft="20dp"
        android:textSize="15dp"
        app:textStyle="@integer/poppins_regular" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:gravity="center|bottom"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/btnContinue"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_25sdp"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/_10sdp"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_15sdp"
            android:background="@drawable/back_btn_bg"
            android:gravity="center"
            android:paddingLeft="@dimen/_3sdp"
            android:paddingTop="@dimen/_5sdp"
            android:paddingRight="@dimen/_3sdp"
            android:paddingBottom="@dimen/_5sdp">

            <com.netbazaar.view.NetbazaarTextView
                android:id="@+id/textContinue"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_10sdp"
                android:layout_marginLeft="@dimen/_5sdp"
                android:text="@string/_continue"
                android:textColor="@color/red"
                android:textSize="@dimen/_7sdp"
                app:textStyle="@integer/poppins_regular" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>