<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:weightSum="3"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="match_parent"
        android:background="@drawable/transferant_background">

    </LinearLayout>



    <LinearLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:visibility="visible"
        android:background="@color/white"
        android:layout_height="match_parent">

            <com.netbazaar.view.NetbazaarTextView
                android:id="@+id/textSplitBill"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/split_bill"
                android:layout_margin="@dimen/_5sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp"
                app:textStyle="@integer/poppins_semibold" />


        <com.netbazaar.view.NetbazaarTextView
            android:id="@+id/textSplit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_21sdp"
            android:text="@string/split"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="14dp"
            android:textFontWeight="500"
            app:textStyle="@integer/poppins_regular" />

        <com.netbazaar.view.NetbazaarEditText
            android:id="@+id/edTextSplit"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_2sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:background="@drawable/edit_text_background_style"
            android:hint="@string/one"
            android:drawableRight="@drawable/down_arrow"
            android:paddingRight="@dimen/_5sdp"
            android:paddingLeft="20dp"
            android:textSize="15dp"
            app:textStyle="@integer/poppins_regular" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerviewSplitCartList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="false"
            android:layout_centerVertical="false"
            android:scrollbars="none"
            android:visibility="visible" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center|bottom"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <com.netbazaar.view.NetbazaarTextView
                    android:id="@+id/textSplitTotalAmount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/total_amt"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_8sdp"
                    app:textStyle="@integer/poppins_semibold" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    >
                    <com.netbazaar.view.NetbazaarTextView
                        android:id="@+id/textSplitDollar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="$"
                        android:textColor="@color/red"
                        android:textSize="@dimen/_5sdp"
                        app:textStyle="@integer/poppins_regular"/>
                    <com.netbazaar.view.NetbazaarTextView
                        android:id="@+id/textSplitPrice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="5.45"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_8sdp"
                        app:textStyle="@integer/poppins_semibold"
                        />

                </LinearLayout>

            </RelativeLayout>

            <LinearLayout
                android:id="@+id/btnSplitContinue"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/_10sdp"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_15sdp"
                android:background="@drawable/back_btn_bg"
                android:gravity="center"
                android:paddingLeft="@dimen/_3sdp"
                android:paddingTop="@dimen/_5sdp"
                android:paddingRight="@dimen/_3sdp"
                android:paddingBottom="@dimen/_5sdp">

                <com.netbazaar.view.NetbazaarTextView
                    android:id="@+id/textSplitContinue"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/_10sdp"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:text="@string/_continue"
                    android:textColor="@color/red"
                    android:textSize="@dimen/_7sdp"
                    app:textStyle="@integer/poppins_regular" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>